<resources>
    <string name="app_name">SettingApp</string>
    <string name="content_request">Since March 2019, Google prohibited the access to the         call log to all call recording apps. In order to identify a caller number, please, enable Call Recorder ACR App Connector in your device\'s Accessibility Settings.\n\nIn case a caller\'s number wasn\'t identified,         you can set it manually via the recording\'s context menu.\n\nApp Connector is also required to record cellular calls on Android 10 devices.\n\nNOTE: App Connector requires Accessibility Services permission.</string>
    <string name="title_accessibility_1">Enable Call Recorder ACR App Connector</string>
    <string name="active_app_connector">Active App Connector</string>
    <string name="navigation_open">Open</string>
    <string name="navigation_close">Close</string>

    <string name="tv_title_four_fragment">Handle position</string>
    <string name="tv_des_four_fragment">Navigation gestures can interfere with this<br />app.If you use them,you will still be able to <br />use this app if you select "Left" or "Right" below.<br /><br />Select an edge to open the notification shade from:</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="bottom">Bottom</string>
    <string name="tv_five_fragment">Let\'s get started!</string>
    <string name="tv_title_one_fragment">Welcome to Setting App</string>
    <string name="tv_des_one_fragment">Swipe left to get started</string>
    <string name="tv_title_two_fragment">Firstly,set up some<br />permissions</string>
    <string name="tv_title_accessibility">ACCESSIBILITY SERVICE<br />Required for the app to run</string>
    <string name="tv_draw_overlay">DRAW OVERLAYS<br />For the quick settings panel to<br />be dissplayed</string>
    <string name="tv_title_show_noti">SHOW NOTIFICATIONS<br />To show notifications in the<br /> notification panel</string>
    <string name="permission_can_also_be_set_later_on">Permission can also be set later on</string>
    <string name="tv_title_three_fragment">Background Type</string>
    <string name="none">none</string>
    <string name="select_a_style_for_the_panel_background">Select a style for the panel background</string>
    <string name="drag_and_drop_tiles_to_reposition_them_in_the_nactive_area">Drag and drop tiles to reposition them in the<br />Active area.<br />Tap tiles to add/remote them.<br />Touch and hold a tile in the Inactive area to<br />delete it.<br /><br />3rd party tiles are supported but are limited due<br />to Android restrictions.</string>
    <string name="tap_tiles_to_add_remote_them">Tap tiles to add/remote them.</string>
    <string name="tile_options">Tile Options</string>
    <string name="tile_toggle_method">Tile toggle method</string>
    <string name="select_an_icon_pack">Select an Icon Pack</string>
    <string name="you_can_also_add_a">You can also add a:</string>
    <string name="url">URL</string>
    <string name="app">APP</string>
    <string name="shortcut">SHORTCUT</string>
    <string name="custom_shortcut">CUSTOM SHORTCUT</string>
    <string name="active">Active</string>
    <string name="inactive">Inactive</string>
    <string name="night_mode">Night mode</string>
    <string name="music_player">Music player</string>
    <string name="select_a_method_to_toggle_secure_settings_nsuch_as_mobile_data">Select a method to toggle secure settings<br />such as mobile data</string>

    <string name="service_running">Service running</string>
    <string name="titles">Titles</string>
    <string name="slides">Slides</string>
    <string name="handles">Handles</string>
    <string name="colors">Colors</string>
    <string name="title_styles">Title Styles</string>
    <string name="send_us_an_email">Send us an email</string>
    <string name="support_development">Support Development</string>
    <string name="backup_restore">Backup / Restore</string>
    <string name="tips">Tips</string>
    <string name="extras">Extras</string>
    <string name="normal">Normal</string>
    <string name="adb_root">ADB/Root</string>
    <string name="screen_timeout">Screen timeout</string>
    <string name="enabled_style">Enabled style</string>
    <string name="disabled_style">Disabled style</string>
    <string name="enable_tile_gradients">Enable tile gradients</string>
    <string name="tile_icon_shape">Tile icon shape</string>
    <string name="solid_colors">Solid colors</string>
    <string name="tile_background_enabled">Tile background(enabled)</string>
    <string name="tile_background_disabled">Tile background(disabled)</string>
    <string name="tile_icon_enabled">Tile icon(enabled)</string>
    <string name="tile_icon_disabled">Tile icon(disabled)</string>
    <string name="enabled_tile_gradient">Enabled tile gradient</string>
    <string name="preset_gradients">Preset gradients</string>
    <string name="tap_a_gradient_to_apply_it_scroll_for_more">Tap a gradient to apply it.Scroll for more</string>
    <string name="gradient_color_start">Gradient color start</string>
    <string name="gradient_color_end">Gradient color end</string>
    <string name="swipe_upwards_to_open_the_panel_when_the_handle_is_on_the_left_or_right">Swipe upwards to open the panel when the Handle is on the left or right.</string>
    <string name="choose_apps_to_hide_the_handles_in">Choose apps to hide the handles in</string>
    <string name="blacklist1">Blacklist</string>
    <string name="hide_handle_icon">Hide handle icon</string>
    <string name="hide_in_fullscreen">Hide in fullscreen</string>
    <string name="hide_in_landscape_mode">Hide in landscape mode</string>
    <string name="bottom_handle">Bottom Handle</string>
    <string name="disable_handle">Disable handle</string>
    <string name="description_accessibility">update later</string>
    <string name="these_settings_are_premium_features">These settings are premium features.</string>
    <string name="to_unlock_them_buy_premium">To unlock them, buy premium.</string>
    <string name="customise_individual_colors_and_transparency">Customise Individual Colors and Transparency</string>
    <string name="media_volume">Media volume</string>
    <string name="alarm_volume">Alarm volume</string>
    <string name="layout">Layout</string>
    <string name="number_of_rows">Number of rows</string>
    <string name="show_panel_footer">Show panel footer</string>
    <string name="crop_app_icon_to_circles">Crop app icon to circles</string>
    <string name="left_handle">Left handle</string>
    <string name="open_panel_directly_to_expaned">Open panel directly to expaned</string>
    <string name="smooth_brightness">Smooth brightness</string>
    <string name="blur_background">Blur Background</string>
    <string name="hide_persistent_notifications">Hide persistent notifications</string>
    <string name="blacklist">Blacklist</string>
    <string name="choose_apps_to_hide_notifications_from">Choose apps to hide notifications from</string>
    <string name="dynamic_notification_colors">Dynamic notification colors</string>
    <string name="notification_colors_will_match_the_app_icon_colors">Notification colors will match the app icon colors</string>
    <string name="notification_background">Notification background</string>
    <string name="quick_clear_all_notifications">Quick clear all notifications</string>
    <string name="hide_while_keyboard_is_open">Hide while keyboard is open</string>
    <string name="enable_if_you_are_experiencing_issues_while_the_keyboard_is_open">Enable if you are experiencing issues while the keyboard is open</string>
    <string name="service_active">Active</string>
    <string name="service_inactive">Inactive</string>
    <string name="tile_label">tile label</string>
    <string name="tile_name">tile name</string>
    <string name="accessibility_service_description">update later</string>

    <string-array name="ahihi">
        <item>e an com chua1</item>
        <item>e an com chua2</item>
        <item>e an com chua3</item>
        <item>e an com chua4</item>
        <item>e an com chua5</item>
    </string-array>
</resources>