<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".welcome.FourFragment">
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_title_four_fragment"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_40sdp"
        android:textSize="@dimen/_20sdp"/>
    <TextView
        android:id="@+id/tvDes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_des_four_fragment"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/tvTitle"
        android:layout_marginTop="@dimen/_40sdp"
        android:textSize="@dimen/_12sdp"/>
    <TextView
        android:id="@+id/tvLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/tvDes"
        android:text="@string/left"
        android:layout_marginTop="@dimen/_40sdp"
        android:textSize="@dimen/_12sdp"/>
    <TextView
        android:id="@+id/tvRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/tvLeft"
        android:text="@string/right"
        android:layout_marginTop="@dimen/_20sdp"
        android:textSize="@dimen/_12sdp"/>
    <TextView
        android:id="@+id/tvBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/tvRight"
        android:text="@string/bottom"
        android:layout_marginTop="@dimen/_20sdp"
        android:textSize="@dimen/_12sdp"/>
</RelativeLayout>