<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".tiles.TilesActivity">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/rlTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20sdp">

        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:src="@drawable/ic_launcher_background" />

        <TextView
            android:layout_toEndOf="@id/imgBack"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_width="wrap_content"
            android:layout_centerVertical="true"
            android:textColor="@color/black"
            android:textSize="@dimen/_20sdp"
            android:id="@+id/tvTitle"
            android:layout_height="wrap_content"
            android:text="Tiles"
            android:layout_toRightOf="@id/imgBack"
            android:layout_marginLeft="@dimen/_20sdp" />
        <ImageView
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:src="@drawable/ic_launcher_background"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true" />
    </RelativeLayout>
    <TextView
        android:id="@+id/tvDes1"
        android:layout_below="@+id/rlTop"
        android:layout_marginStart="@dimen/_60sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/drag_and_drop_tiles_to_reposition_them_in_the_nactive_area"
        android:layout_marginLeft="@dimen/_60sdp" />
    <RelativeLayout
        android:id="@+id/rlTileoption"
        android:layout_below="@id/tvDes1"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_20sdp">
        <ImageView
            android:id="@+id/imgOption"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:src="@drawable/ic_launcher_background"/>
        <TextView
            android:layout_toEndOf="@id/imgOption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tile_options"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_toRightOf="@id/imgOption"
            android:layout_marginLeft="@dimen/_20sdp" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rlTiletoggle"
        android:layout_below="@id/rlTileoption"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_20sdp">
        <ImageView
            android:id="@+id/imgToggle"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:src="@drawable/ic_launcher_background"/>
        <TextView
            android:layout_toEndOf="@id/imgToggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tile_toggle_method"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_toRightOf="@id/imgToggle"
            android:layout_marginLeft="@dimen/_20sdp" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rlSelectIcon"
        android:layout_below="@id/rlTiletoggle"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_20sdp">
        <ImageView
            android:id="@+id/imgSelect"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:src="@drawable/ic_launcher_background"/>
        <TextView
            android:layout_toEndOf="@id/imgSelect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_an_icon_pack"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_toRightOf="@id/imgSelect"
            android:layout_marginLeft="@dimen/_20sdp" />
    </RelativeLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rlSelectIcon"
        android:layout_marginStart="@dimen/_20sdp"
        android:text="@string/you_can_also_add_a"
        android:layout_marginLeft="@dimen/_20sdp"
        android:id="@+id/tvChoose"
        android:layout_marginTop="@dimen/_20sdp"/>
    <LinearLayout
        android:weightSum="3"
        android:layout_below="@+id/tvChoose"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/_20sdp"
        android:id="@+id/lnAdd"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tvUrl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/url"/>
        <TextView
            android:id="@+id/tvApp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/app"/>
        <TextView
            android:id="@+id/tvShortcut"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/shortcut"/>
    </LinearLayout>
    <TextView
        android:id="@+id/tvCustom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAllCaps="true"
        android:layout_below="@id/lnAdd"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_centerHorizontal="true"
        android:text="@string/custom_shortcut"/>
    <TextView
        android:id="@+id/tvActive"
        android:layout_width="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_height="wrap_content"
        android:text="@string/active"
        android:layout_below="@id/tvCustom"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_20sdp" />
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvActive"
        android:id="@+id/rcvActive"/>
        <TextView
            android:id="@+id/tvInActive"
            android:layout_width="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_height="wrap_content"
            android:text="@string/inactive"
            android:layout_below="@id/rcvActive"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_20sdp" />
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvInActive"
            android:id="@+id/rcvInActive"/>
    </RelativeLayout>
</ScrollView>
</RelativeLayout>