<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3367D6">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/btn_active"
        android:layout_below="@id/title"
        android:layout_marginLeft="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:layout_marginRight="@dimen/_25sdp"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/content_request"
                android:textColor="@color/white"
                android:fontFamily="@font/robotoregular"
                android:textSize="@dimen/_13sdp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_140sdp"
                android:src="@drawable/bg_accessibility" />

        </LinearLayout>

    </ScrollView>

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_40sdp"
        android:layout_marginRight="@dimen/_30sdp"
        android:fontFamily="@font/robotoregular"
        android:gravity="center"
        android:text="@string/title_accessibility_1"
        android:textColor="@color/white"
        android:textSize="@dimen/_18sdp" />

    <TextView
        android:id="@+id/btn_active"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/_20sdp"
        android:background="@drawable/bg_boder_button"
        android:padding="@dimen/_16sdp"
        android:text="@string/active_app_connector"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="@dimen/_13sdp"
        android:gravity="center_horizontal" />

</RelativeLayout>
