<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/_10sdp"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ln_bottom_settings"
        android:paddingVertical="@dimen/_8sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/_23sdp"
            android:layout_height="@dimen/_23sdp"
            android:padding="@dimen/_2sdp"
            android:src="@drawable/bottom" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:text="Bottom Quick Settings"
            android:fontFamily="@font/robotoregular"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="15sp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ln_FAQ"
        android:paddingVertical="@dimen/_8sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="@dimen/_22sdp"
            android:layout_height="@dimen/_22sdp"
            android:padding="@dimen/_2sdp"
            android:src="@drawable/ic_faq"
            android:tint="@color/text_primary"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:text="FAQ"
            android:layout_gravity="center"
            android:fontFamily="@font/robotoregular"
            android:textColor="@color/black"
            android:textSize="15sp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ln_write_review"
        android:paddingVertical="@dimen/_8sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:padding="@dimen/_2sdp"
            android:src="@drawable/ic_star"
            android:tint="@color/text_primary"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:text="Write a review"
            android:layout_gravity="center"
            android:fontFamily="@font/robotoregular"
            android:textColor="@color/black"
            android:textSize="15sp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ln_send_email"
        android:paddingVertical="@dimen/_8sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="@dimen/_23sdp"
            android:layout_height="@dimen/_23sdp"
            android:padding="@dimen/_3sdp"
            android:src="@drawable/ic_send_text"
            android:tint="@color/text_primary"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:text="@string/send_us_an_email"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:fontFamily="@font/robotoregular"
            android:textSize="15sp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ln_coin_support"
        android:paddingVertical="@dimen/_8sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="@dimen/_23sdp"
            android:layout_height="@dimen/_23sdp"
            android:padding="@dimen/_2sdp"
            android:src="@drawable/ic_coin"
            android:tint="@color/text_primary"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:text="@string/support_development"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:fontFamily="@font/robotoregular"
            android:textSize="15sp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ln_upload"
        android:paddingVertical="@dimen/_8sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="@dimen/_23sdp"
            android:layout_height="@dimen/_23sdp"
            android:src="@drawable/ic_upload"
            android:tint="@color/text_primary"
            android:padding="@dimen/_2sdp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:text="@string/backup_restore"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:fontFamily="@font/robotoregular"
            android:textSize="15sp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ln_tips"
        android:paddingVertical="@dimen/_8sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="@dimen/_23sdp"
            android:layout_height="@dimen/_23sdp"
            android:padding="@dimen/_2sdp"
            android:tint="@color/text_primary"
            android:src="@drawable/ic_tips"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:text="@string/tips"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:fontFamily="@font/robotoregular"
            android:textSize="15sp"/>
    </LinearLayout>



</LinearLayout>